Update iframe source for biolab support

--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
     <h1>Copilot Studio Agent</h1>
   </header>
   <main>
-    <iframe src="https://copilotstudio.microsoft.com/environments/Default-2ee15019-526a-4503-bfde-6f9d55c5c807/bots/cr10f_biolabInfoAssistant/webchat?__version__=2"></iframe>
+    <iframe src="https://copilotstudio.microsoft.com/environments/Default-2ee15019-526a-4503-bfde-6f9d55c5c807/bots/cr10f_biolabSupport/canvas?__version__=2&amp;enableFileAttachment=true"></iframe>
   </main>
   <footer>
     © 2025 Your Company | Powered by Microsoft Copilot Studio
   </footer>
 </body>
+</html>
