Update iframe source URL in index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <h1>Copilot Studio Agent</h1>
   </header>
   <main>
-    <iframe src="https://copilotstudio.microsoft.com/environments/Default-2ee15019-526a-4503-bfde-6f9d55c5c807/bots/cr10f_biolabSupport/canvas?__version__=2&amp;enableFileAttachment=true"></iframe>
+    <iframe src="https://default3ef2736c83214a95b4630bffbe2617.64.environment.api.powerplatform.com/copilotstudio/dataverse-backed/authenticated/bots/crb64_mJetsAgent/conversations?api-version=2022-03-01-preview"></iframe>
   </main>
   <footer>
     © 2025 Your Company | Powered by Microsoft Copilot Studio
