--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Copilot Studio Agent Webpage</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Copilot Studio Agent Webchat</title>
   <style>
     :root {
       --brand: #0078D4;
@@ -31,7 +31,7 @@
 
     header {
       background-color: var(--brand);
-      color: white;
+      color: #fff;
       text-align: center;
       padding: 1rem;
     }
@@ -48,56 +48,7 @@
       padding: 1rem;
     }
 
-    /* ใช้ container เพื่อควบคุมสัดส่วน iframe */
     .iframe-container {
       width: 100%;
       max-width: 1200px;
-      /* ทำให้สูงพอดีกับ viewport ลบ header/footer */
-      min-height: calc(100vh - 160px);
-      /* เงาและมุมโค้งเหมือนเดิม */
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      border-radius: 8px;
-      overflow: hidden; /* ให้มุมโค้งมีผลกับ iframe */
-      background: #fff;
-    }
-
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-      display: block;
-    }
-
-    footer {
-      background-color: var(--footer-bg);
-      text-align: center;
-      padding: 0.75rem;
-      font-size: 0.9rem;
-    }
-
-    @media (max-width: 768px) {
-      .iframe-container {
-        min-height: calc(100vh - 140px);
-      }
-    }
-    @media (max-width: 480px) {
-      .iframe-container {
-        min-height: calc(100vh - 120px);
-      }
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Copilot Studio Agent</h1>
-  </header>
-
-  <main>
-    <div class="iframe-container">
-      <!-- ใช้ลิงก์ webchat ตามที่ต้องการ -->
-      <iframe
-        src="https://copilotstudio.microsoft.com/environments/Default-3ef2736c-8321-4a95-b463-0bffbe261764/bots/crb64_mJetsAgent/webchat?__version__=2"
-        title="Copilot Studio Webchat"
-        allow="clipboard-read; clipboard-write"
-        referrerpolicy="strict-origin-when-cross-origin"
-        sandbox="allow-forms allow-scripts allow-same-origin allow-popups"
+      min-height: calc(100vh - 160px); /* พื้นที่หลักลบ header/footer */
